<resources>
    <string name="app_name">Contacts_Application</string>
    <string name="phone_number">phone Number</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="save_contact">Save Contact</string>
    <string name="todo">TODO</string>
    <string name="nameDetails">Name :</string>
    <string name="phone">Phone :</string>
    <string name="descriptionDetails">Description :</string>
    <string name="contacts_list">Contacts List</string>
    <string name="contact_details">Contact Details</string>
</resources>