<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

   <com.google.android.material.appbar.AppBarLayout
       android:id="@+id/toolbar"
       android:layout_width="0dp"
       android:layout_height="50dp"
       android:background="@color/black"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/contacts_list"
          android:textColor="@color/white"
          android:textSize="23sp"
          android:textStyle="bold"
          android:layout_marginTop="15dp"
          android:layout_marginStart="15dp"/>

   </com.google.android.material.appbar.AppBarLayout>
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerViewContacts"
       android:layout_width="match_parent"
       android:layout_height="550dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/toolbar"
       android:padding="5dp"
       tools:listitem="@layout/contactsitems"/>
   <EditText
       android:id="@+id/nameET"
       android:layout_width="wrap_content"
       android:layout_height="48dp"
       android:hint="@string/name"
       android:inputType="text"
       android:textColorHint="#4C4848"
       app:layout_constraintEnd_toStartOf="@id/phoneNumberET"
       app:layout_constraintTop_toBottomOf="@id/recyclerViewContacts"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:autofillHints=""
       android:textColor="@color/black"
       android:textSize="16sp"
       android:layout_marginBottom="15dp"/>
   <EditText
       android:id="@+id/phoneNumberET"
       android:layout_width="wrap_content"
       android:layout_height="48dp"
       android:hint="@string/phone_number"
       android:inputType="phone"
       android:textColorHint="#4C4848"
       app:layout_constraintTop_toBottomOf="@id/recyclerViewContacts"
       app:layout_constraintStart_toEndOf="@id/nameET"
       app:layout_constraintEnd_toStartOf="@id/descriptionET"
       app:layout_constraintBottom_toBottomOf="parent"
       android:autofillHints=""
       android:textColor="@color/black"
       android:textSize="16sp"
       android:layout_marginBottom="15dp"/>
   <EditText
       android:id="@+id/descriptionET"
       android:layout_width="wrap_content"
       android:layout_height="48dp"
       android:hint="@string/description"
       android:inputType="text"
       android:textColorHint="#4C4848"
       app:layout_constraintTop_toBottomOf="@id/recyclerViewContacts"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@id/phoneNumberET"
       app:layout_constraintBottom_toBottomOf="parent"
       android:autofillHints=""
       android:textColor="@color/black"
       android:textSize="16sp"
       android:layout_marginBottom="15dp"/>
   <Button
       android:id="@+id/saveContactBtn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:backgroundTint="@color/black"
       android:text="@string/save_contact"
       android:textColor="@color/white"
       app:layout_constraintTop_toBottomOf="@id/phoneNumberET"/>

</androidx.constraintlayout.widget.ConstraintLayout>