<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailsContactsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/contact_details"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>
    </com.google.android.material.appbar.AppBarLayout>
    <ImageView
        android:id="@+id/imageForDetails"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:src="@drawable/baseline_contact_phone_24"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/linearForName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/imageForDetails">

        <TextView
            android:id="@+id/nameDefineLinear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/nameDetails"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/nameForUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginStart="5dp"
            tools:text="Sherif Elkady"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearForPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/linearForName">

        <TextView
            android:id="@+id/phoneDefineLinear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/phoneForUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginStart="5dp"
            tools:text="01069600538"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearForDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/linearForPhone">

        <TextView
            android:id="@+id/desDefineLinear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginStart="5dp"
            android:text="@string/descriptionDetails"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/descriptionForUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:layout_marginStart="5dp"
            tools:text="The only number of sherif"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>